fixed the channel not showing up when category is deleleted bug

--- a/react-app/src/components/NewMessage/NewMessage.css
+++ b/react-app/src/components/NewMessage/NewMessage.css
@@ -27,4 +27,5 @@
 
 .input-err::placeholder {
   color: red !important;
+  opacity: 0.7;
 }
